[package]
name = "iot-device-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true


[dependencies]
log = "0.4"
env_logger = "0.8.4"
clap = { version = "3.1.18", features = ["derive"] }
toml = "0.4.5"
csv = "1.1"
serde_derive = "1.0.32"
serde = "1.0.32"
thiserror = "1.0.31"
anyhow = "1.0.57"
tokio = { version = "1.19.2", features = ["full"] }
opcua = { version = "0.11.0", features = ["server", "console-logging"] }


